force-app/main/default/objects/Product_Option_Component__c/Product_Option_Component__c.object-meta.xml
<CustomObject>
    <label>Product Option Component</label>
    <nameField>
        <label>Component Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Option Component</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>