force-app/main/default/objects/Product_Option_Component__c/fields/AccounId__c.field-meta.xml
<CustomField>
    <fullName>AccounId__c</fullName>
    <formula>Product_Option__r.Product__r.Account__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AccounId</label>
    <type>Text</type>
</CustomField>