force-app/main/default/objects/Product_Option_Component__c/fields/Available_Stock_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Available_Stock_Quantity__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Available Stock Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>