force-app/main/default/objects/Product_Option_Component__c/fields/Billing_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Billing_Frequency__c</fullName>
    <description>Specifies billing frequency. Either day, week, month or year</description>
    <label>Billing Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>day</fullName>
                <label>Day</label>
            </value>
            <value>
                <fullName>week</fullName>
                <label>Week</label>
            </value>
            <value>
                <fullName>month</fullName>
                <label>Month</label>
            </value>
            <value>
                <fullName>year</fullName>
                <label>Year</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>