force-app/main/default/objects/Product_Option_Component__c/fields/Billing_Scheme__c.field-meta.xml
<CustomField>
    <fullName>Billing_Scheme__c</fullName>
    <description>per_unit indicates that the fixed amount (specified in unit_amount or unit_amount_decimal) will be charged per unit in quantity (for prices with usage_type=licensed), or per unit of total usage (for prices with usage_type=metered).

tiered indicates that the unit pricing will be computed using a tiering strategy as defined using the tiers and tiers_mode attributes.</description>
    <label>Billing Scheme</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>per_unit</fullName>
                <default>true</default>
                <label>Per Unit</label>
            </value>
            <value>
                <fullName>tiered</fullName>
                <label>Tired</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>