force-app/main/default/objects/Product_Option_Component__c/fields/Is_Non_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Is_Non_Inventory__c</fullName>
    <formula>IF( ISBLANK( Product_Inventory__c ) , TRUE , FALSE )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Non Inventory</label>
    <type>Checkbox</type>
</CustomField>