force-app/main/default/objects/Product_Option_Component__c/fields/Is_Option_Available__c.field-meta.xml
<CustomField>
    <fullName>Is_Option_Available__c</fullName>
    <formula>IF( ISBLANK(Product_Inventory__c) , TRUE , IF(  Product_Inventory__r.Stock_Quantity__c &gt;=  Required_Quantity__c , TRUE, FALSE) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Option Available</label>
    <type>Checkbox</type>
</CustomField>