force-app/main/default/objects/Product_Option_Component__c/fields/Last_Processed_SYSLog__c.field-meta.xml
<CustomField>
    <fullName>Last_Processed_SYSLog__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Processed SYSLog</label>
    <referenceTo>SYS_IntegrationLog__c</referenceTo>
    <relationshipLabel>Product Option Component</relationshipLabel>
    <relationshipName>Product_Option_Component</relationshipName>
    <type>Lookup</type>
</CustomField>