force-app/main/default/objects/Product_Option_Component__c/fields/Product_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Product_Inventory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Inventory</label>
    <referenceTo>Inventory__c</referenceTo>
    <relationshipName>PMA_Product_Options</relationshipName>
    <type>Lookup</type>
</CustomField>