force-app/main/default/objects/Product_Option_Component__c/fields/Product_Option__c.field-meta.xml
<CustomField>
    <fullName>Product_Option__c</fullName>
    <label>Product Option</label>
    <referenceTo>Product_Option__c</referenceTo>
    <relationshipLabel>Product Option Component</relationshipLabel>
    <relationshipName>Product_Option_Component</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>