force-app/main/default/objects/Product_Option_Component__c/fields/Product_Option_l__c.field-meta.xml
<CustomField>
    <fullName>Product_Option_l__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Option</label>
    <referenceTo>Product_Option__c</referenceTo>
    <relationshipLabel>Product Option Component (Product Option)</relationshipLabel>
    <relationshipName>Product_Option_Component1</relationshipName>
    <type>Lookup</type>
</CustomField>