force-app/main/default/objects/Product_Option_Component__c/fields/Required_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Required_Quantity__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Required Quantity</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>