force-app/main/default/objects/Product_Option_Component__c/fields/Stripe_Product_Id__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Product_Id__c</fullName>
    <label>Stripe Product Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>