force-app/main/default/objects/Product_Option_Component__c/fields/Subscription_Aggregate_Usage__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Aggregate_Usage__c</fullName>
    <description>Specifies a usage aggregation strategy for prices of usage_type=metered. Allowed values are sum for summing up all usage during a period, last_during_period for using the last usage record reported within a period, last_ever for using the last usage record ever (across period bounds) or max which uses the usage record with the maximum reported usage during a period. Defaults to sum.</description>
    <label>Subscription Aggregate Usage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>sum</fullName>
            </value>
            <value>
                <fullName>last_during_period</fullName>
            </value>
            <value>
                <fullName>last_ever</fullName>
            </value>
            <value>
                <fullName>max</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>