force-app/main/default/objects/Product_Option_Component__c/fields/Subscription_Interval_Count__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Interval_Count__c</fullName>
    <label>Subscription Interval Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>