force-app/main/default/objects/Product_Option_Component__c/fields/Subscription_Usage_Type__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Usage_Type__c</fullName>
    <description>licensed automatically bills the quantity set when adding it to a subscription. 
metered aggregates the total usage based on usage records. Defaults to licensed</description>
    <label>Subscription Usage Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>metered</fullName>
                <label>Metered</label>
            </value>
            <value>
                <fullName>licensed</fullName>
                <default>true</default>
                <label>Licensed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>