force-app/main/default/objects/Product_Option_Component__c/fields/Tax_Behavior__c.field-meta.xml
<CustomField>
    <fullName>Tax_Behavior__c</fullName>
    <description>Specifies whether the price is considered inclusive of taxes or exclusive of taxes. 
Once specified as either inclusive or exclusive, it cannot be changed.</description>
    <label>Tax Behavior</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>inclusive</fullName>
                <label>Inclusive</label>
            </value>
            <value>
                <fullName>exclusive</fullName>
                <label>Exclusive</label>
            </value>
            <value>
                <fullName>unspecified</fullName>
                <label>Unspecified</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>