force-app/main/default/objects/Product_Option_Component__c/fields/Tiers_Mode__c.field-meta.xml
<CustomField>
    <fullName>Tiers_Mode__c</fullName>
    <description>Defines if the tiering price should be graduated or volume based.
In volume-based tiering, the maximum quantity within a period determines the per-unit price. 
In graduated tiering, pricing can change as the quantity grows</description>
    <label>Tiers Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>graduated</fullName>
                <label>Graduated</label>
            </value>
            <value>
                <fullName>volume</fullName>
                <label>Volume</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>