force-app/main/default/objects/Product_Option_Component__c/fields/Transform_Quantity_Divide_By__c.field-meta.xml
<CustomField>
    <fullName>Transform_Quantity_Divide_By__c</fullName>
    <description>Divide reported usage by this number.</description>
    <label>Transform Quantity Divide By</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>