force-app/main/default/objects/Product_Option_Component__c/fields/Transform_Quantity_Round__c.field-meta.xml
<CustomField>
    <fullName>Transform_Quantity_Round__c</fullName>
    <description>After division, either round the result up or down</description>
    <label>Transform Quantity Round</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>up</fullName>
                <label>Up</label>
            </value>
            <value>
                <fullName>down</fullName>
                <label>Down</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>