force-app/main/default/objects/Product_Option_Component__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <inlineHelpText>Product Price Type - Onetime or Subscription</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>one_time</fullName>
                <label>One Time</label>
            </value>
            <value>
                <fullName>recurring</fullName>
                <label>Subscription</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>