force-app/main/default/objects/Product_Option_Component__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product_Option__c</columns>
    <columns>Product_Inventory__c</columns>
    <columns>Unit_Price__c</columns>
    <columns>Is_Option_Available__c</columns>
    <columns>Required_Quantity__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>